# n8n-art-architect

./: Dockerfile  pyproject.toml
src/: synthetic_data.py  train.py
